            - New routine str(), which is an alias for stringValue().
            - New class constant supportsInfinity, which is set to false.
        Class IntOfBits<k>:
            - New type alias to simplify arithmetic when using IntOfSize<...>.
        Class Isomorphism<dim>:
            - New routine hash(), which uses the tight encoding.
        Enum Language:
            - New enumeration that describes supported programming languages.
        Class LargeInteger:
            - New routine hash(), which hashes the integer down to a size_t.
            - New routine str(), which is an alias for stringValue().
            - New class constant supportsInfinity, which is set to true.
        Class Laurent<T>, Laurent2<T>:
            - New routine hash(), which uses the tight encoding.
        Class Link:
            - New routine makeAlternating().
            - New routine seifertCircles().
            - New routines countTrivialComponents() and pdAmbiguous(), to help
              understand the limitations of planar diagram codes.
            - New routine hash(), which uses the tight encoding.
            - New routines overForComponent() and underForComponent().
            - New variant of reverse() to reverse just one component of a
              multiple-component link.
            - Routine hasReducingPass() can now handle multiple-component links.
            - Fixed a bug where calling resolve() would not clear out any
              cached link polynomials that had already been computed.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
            - Optimised so that computed topological properties (e.g., Jones
              and HOMFLY-PT polynomials) are preserved through operations that
              do not change the topology (e.g., Reidemeister moves).
            - Renamed dumpConstruction() to source(), and extended it to produce